--- a/conf/config.conf
+++ b/conf/config.conf
@@ -11,8 +11,9 @@ track_keywords2 = biden
 location = -122.75,36.8,-121.75,37.8
 
 [Resources]
-app_topic_name = twitter
-dashboard_topic_name = processedtweets
+app_topic_name_hashtag = hashtag
+app_topic_name_mention = mention
+dashboard_topic_name = processedtweets2
 pyspark_environ = --packages org.apache.spark:spark-streaming-kafka-0-8_2.11:2.0.2 pyspark-shell
 
 [Kafka_param]
