fetch mention tweets, add mention stats chart in webpage

--- a/conf/config.conf
+++ b/conf/config.conf
@@ -1,9 +1,3 @@
-[API_details]
-consumer_key = SD4qJR2Ryyn04D1s3PCDN77St
-consumer_secret = lizXZVtGq9lxhU8vQGXgRRb90P6diwjobG9nTzleXqKyd5IWbV
-access_token = 1702354878-STbGjleJhdeSNX0YmZC45nVj8DqRXwy45qpqQct
-access_secret = NXD5bbKEukrOqHXqwvegDHK1WiluSN7ilbimFMKOaiSzF
-
 [API_param]
 language = en
 track_keywords = trump
@@ -14,6 +8,7 @@ location = -122.75,36.8,-121.75,37.8
 app_topic_name_hashtag = hashtag
 app_topic_name_mention = mention
 dashboard_topic_name = processedtweets2
+dashboard_topic_name_mention = processedtweets3
 pyspark_environ = --packages org.apache.spark:spark-streaming-kafka-0-8_2.11:2.0.2 pyspark-shell
 
 [Kafka_param]
